--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Douglas Aguiar",
   "dependencies": {
     "@types/express": "4.17.13",
+    "cors": "^2.8.5",
     "express": "4.17.3",
     "express-rescue": "1.1.31",
     "joi": "^17.6.0"
